--- a/.github/workflows/deploy-web-application-template.yml
+++ b/.github/workflows/deploy-web-application-template.yml
@@ -23,6 +23,13 @@ jobs:
       with:
         dotnet-version: '6.0.x' 
     - run: dotnet publish ${{env.APP_NAME}} -o publish --configuration Release
+        
+    - name: App Settings Variable Substitution
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: 'publish/${{env.APP_NAME}}/appsettings.json'
+      env:
+        ConnectionStrings.Default: ${{ secrets.CONNECTION_STRING }}
     
     - name: Deploy
       uses: appleboy/scp-action@master
