--- a/Employeesboard/Employeesboard.csproj
+++ b/Employeesboard/Employeesboard.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Employeesboard.Shared\Employeesboard.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
