--- a/.github/workflows/deploy-web-application-template.yml
+++ b/.github/workflows/deploy-web-application-template.yml
@@ -27,10 +27,7 @@ jobs:
     - name: App Settings Variable Substitution
       uses: microsoft/variable-substitution@v1
       with:
-        files: './publish/${{env.APP_NAME}}/appsettings.json'
-        script: |
-          ls
-          pwd
+        files: 'publish/appsettings.json'
       env:
         ConnectionStrings.Default: ${{ secrets.CONNECTION_STRING }}
     
